# neuromorphic-snn-controller-research-env

./: LICENSE  README.md
app/: layout.tsx  page.tsx
scripts/: lyapunov_stability.py  pyproject.toml  run_all_experiments.py  snn_surrogate_gradient.py  spike_encoder.py
