[project]
name = "neuromorphic-robotics"
version = "0.1.0"
description = "Neuromorphic control experiments for 6-DOF robotic arms"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "opencv-python>=4.8.0",
    "torch>=2.0.0",
    "snntorch>=0.7.0",
    "scipy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
